[B]Version 0.1.1[/B]
- Added subitle support
[B]Version 0.1.0[/B]
- Initial version of oneclickmoviez.com plugin