@@ -1,4 +1,5 @@
 <strings>
     <string id="30200">Hide Adult Content</string>
     <string id="30201">Auto Play</string>
+    <string id="30202">Enable Metadata</string>
 </strings>
